--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,4 +1,10 @@
-streamlit
-google-api-python-client
-pandas
-python-dotenv
+streamlit==1.35.0
+google-api-python-client==2.92.0
+pandas==2.2.2
+numpy==1.26.4
+textblob
+matplotlib
+seaborn
+wordcloud
+gensim
+plotly
